# perodic_system-study

./: CMakeLists.txt  Makefile
app/: main.cpp
include/: core.hpp  eigensolver.hpp  hamiltonian.hpp  mixing.hpp  potentials.hpp  scf_modules.hpp
src/: eigensolver.cpp  hamiltonian.cpp  mixing.cpp  potentials.cpp  scf_modules.cpp
